fixed spacing on sign up page

--- a/app/assets/stylesheets/api/errors.scss
+++ b/app/assets/stylesheets/api/errors.scss
@@ -1,9 +1,5 @@
 .error {
-  color: red;
+  color: gray;
   font-size: 10px;
   font-style: bold;
-}
-
-.errors {
-  margin: 0px;
 }
